<resources>
    <string name="app_name">News App</string>
    <string name="search">Search</string>
    <string name="select_country">Select country</string>
    <string name="trending">Trending</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="environment">Environment</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="top">Top</string>
    <string name="world">World</string>
    <string name="no_result_found">No Result found</string>

</resources>